# sonarqube-sdk

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  test-exemple.py  tox.ini
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: applications.rst  client.rst  index.rst  issues.rst  projects.rst  qualitygates.rst  qualityprofiles.rst  rules.rst
src/sonarqube/: __init__.py  auth.py  client.py  exceptions.py  http.py  py.typed
src/sonarqube/api/: __init__.py  applications.py  base.py  components.py  hotspots.py  issues.py  measures.py  projects.py  qualitygates.py  qualityprofiles.py  rules.py  settings.py  sources.py  system.py  user_tokens.py  users.py
src/sonarqube/models/: __init__.py  applications.py  base.py  common.py  components.py  hotspots.py  issues.py  measures.py  projects.py  qualitygates.py  qualityprofiles.py  rules.py  settings.py  sources.py  system.py  user_tokens.py  users.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_exceptions.py  test_http.py  test_models.py
tests/api/: __init__.py  test_applications.py  test_issues.py  test_projects.py
