[project]
name = "sonarqube-sdk"
version = "0.1.0"
description = "A fully-typed Python SDK for SonarQube API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Silas Vasconcelos", email = "silasvasconcelos@hotmail.com.br" }
]
maintainers = [
    { name = "Silas Vasconcelos", email = "silasvasconcelos@hotmail.com.br" }
]
keywords = ["sonarqube", "api", "sdk", "code-quality", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0;python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "mypy>=1.0.0",
    "ruff>=0.8.0",
    "bandit>=1.7.0",
    "tox>=4.0.0",
    "tox-uv>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/silasvasconcelos/sonarqube-sdk"
Documentation = "https://sonarqube-sdk.readthedocs.io"
Repository = "https://github.com/silasvasconcelos/sonarqube-sdk"
Changelog = "https://github.com/silasvasconcelos/sonarqube-sdk/blob/main/CHANGELOG.md"
Issues = "https://github.com/silasvasconcelos/sonarqube-sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/sonarqube"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "mypy>=1.0.0",
    "ruff>=0.8.0",
    "bandit>=1.7.0",
    "tox>=4.0.0",
    "tox-uv>=1.0.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ============================================
# RUFF - Linting & Formatting Configuration
# ============================================
[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "N815",    # mixedCase variables (needed for API field names)
    "PLR0912", # too many branches (SDK methods have many optional params)
    "PLR0913", # too many arguments
    "PLR0915", # too many statements (SDK methods have many optional params)
    "PLR2004", # magic value comparison (HTTP status codes are standard)
    "RUF022",  # __all__ sorted (we want logical grouping)
    "TC001",   # type checking block imports (too strict for SDK)
    "UP007",   # Use X | Y for type unions (not supported in 3.9)
    "UP045",   # Use X | None for type annotations (not supported in 3.9)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "S105",    # hardcoded passwords allowed in tests
    "S106",    # hardcoded passwords allowed in tests
    "ARG",     # unused arguments allowed in fixtures
    "PLR2004", # magic values allowed in tests
]

[tool.ruff.lint.isort]
known-first-party = ["sonarqube"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

# ============================================
# BANDIT - Security Analysis Configuration
# ============================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", ".tox", "build", "dist"]
skips = ["B101"]
targets = ["src"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py", "conftest.py"]

[tool.coverage.run]
source = ["src/sonarqube"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
]

